--- a/prototype.tex
+++ b/prototype.tex
@@ -207,8 +207,8 @@ Let $\iu = \sqrt{-1}$, $o(\cdot)$ and $O(\cdot)$ are little-o and big-O notation
     \begin{figure}[H]
       \centering
       \includegraphics[width=0.6\linewidth]{q3-quasienergy.pdf}
-      \label{fig:q3-quasienergy}
       \caption{Quasienergies vs.\ $\omega_0$}
+      \label{fig:q3-quasienergy}
     \end{figure} 
     Note that the off-diagonal coupling mixes these states, and the non-zero off-diagonal terms will directly mix the the dressed states which differ in energy by $\hbar\omega$ and 
     When $0<\omega_0/\omega\lesssim 2$, $0 < \Delta$ to make $\ket{E_1}$ mix with $\ket{E_2}$ we need only one Floquet Brillouin zone since the only the dressed $\ket{E_1}$; when $2 \lesssim \omega_0/\omega \lesssim 4$, we need 2 Floquet Brillouin zone; and so on.
@@ -324,8 +324,8 @@ Let $\iu = \sqrt{-1}$, $o(\cdot)$ and $O(\cdot)$ are little-o and big-O notation
     \begin{figure}[H]
       \centering
       \includegraphics[width=0.6\linewidth]{q4-ce.pdf}
-      \label{fig:q4-ce}
       \caption{Time-dependency of entropy for spin--boson model.}
+      \label{fig:q4-ce}
     \end{figure}
   \end{enumerate}
 
@@ -445,7 +445,7 @@ Let $\iu = \sqrt{-1}$, $o(\cdot)$ and $O(\cdot)$ are little-o and big-O notation
     \item When we use the wigner representation and take the limit of $\hbar \to 0$ then we recover the classical mechanics, which means that the classical mechanics is a specific representation of quantum mechanics under the limit that Planck constant is small enough.
   \end{enumerate}
 
-  \item Code is available at [GitHub].
+  \item Code is available at \url{https://github.com/vINyLogY/QD-hw2}.
   \begin{enumerate}[(A)]
     \item
     \begin{enumerate}[(i)]
@@ -531,7 +531,7 @@ Let $\iu = \sqrt{-1}$, $o(\cdot)$ and $O(\cdot)$ are little-o and big-O notation
     \begin{enumerate}[(i)]
       \item Suppose under 1-D DVR basis $\set{\ket{\chi_i}}$ the kinetic matrix in one dimension $i$ is $T_i$, the potential matrix in one dimension $i$ is $V_i$, then the kinetic matrix of 2-D is $T_1 \otimes T_2$, and the potential matrix is a diagonal matrix $V_1 \otimes V_2$. Hence we can diagonalize the hamiltonian in the 2-D basis.
       \item See Figure~\ref{fig:q6c-2}. It is clear that for such a system, the exact eigenenergies are $E = \hbar\omega(n + 1)$, where $n = n_a + n_b$, and $n_a,\ n_b \in \mathbb{N}$. This means that for $E = \hbar\omega$, the degeneracy is 1 ($n = 0 + 0$); for $E = 2\hbar\omega$, the degeneracy is 2 ($n = 1 + 0 = 0 + 1$); for $E = 3\hbar\omega$, the degeneracy is 3 ($n = 2 + 0 = 0 + 2 = 1 + 1$); for $E = 4\hbar\omega$, the degeneracy is 4 ($n = 3 + 0 = 0 + 3 = 1 + 2 = 2 + 1$); and so on.
-      From Figure~\ref{fig:qbc-2} we can also find that the parameters (upper and lower bound are both $25$ and $-25$ for each dimension; the dimensionality of basis for each degrees of freedom is 99) is sufficient for the lowest 10 eigenstates.
+      From Figure~\ref{fig:q6c-2} we can also find that the parameters (upper and lower bound are both $25$ and $-25$ for each dimension; the dimensionality of basis for each degrees of freedom is 99) is sufficient for the lowest 10 eigenstates.
 
       \item See Figure~\ref{fig:q6c-3}.
 
